# vfio_motion

./: .gitignore  Cargo.toml  README.md
vfio_motion_client/: Cargo.toml  build.sh  cross_env.sh
vfio_motion_client/docker/: Dockerfile  gdkpixbuf2.sh
vfio_motion_client/src/: config.rs  gui.rs  input.rs  lib.rs  main.rs  service.rs  ui.glade  util.rs  win.rs
vfio_motion_common/: Cargo.toml
vfio_motion_common/src/: input.rs  lib.rs  libvirt.rs  util.rs
vfio_motion_server/: Cargo.toml
vfio_motion_server/src/: attach.json  attach_detach.xml  config.rs  detach.json  input.rs  lib.rs  libvirt.rs  main.rs  server.rs  util.rs
