[package]
name = "vfio_motion_client"
version = "0.1.0"
authors = ["dev <jackos1998@gmail.com>"]

[dependencies]
quick-error = "~1.2"
log = "~0.4"
simplelog = "~0.5"
serde = "~1.0"
serde_derive = "~1.0"
reqwest = "~0.8"
widestring = "0.4"
winapi = { version = "0.3", features = [ "errhandlingapi", "winbase", "winnt",  "winuser", "wincon", "consoleapi", "processthreadsapi" ] }
#vfio_motion_common = { path = "../vfio_motion_common" }
