[package]
name = "vfio_motion_client"
version = "0.1.0"
authors = ["dev <jackos1998@gmail.com>"]

[dependencies]
lazy_static = "~1.1"
quick-error = "~1.2"
log = "~0.4"
simplelog = "~0.5"
clap = "~2.32"
serde = "~1.0"
serde_derive = "~1.0"
config = "~0.9"
toml = "~0.4"
virt = { git = "https://github.com/devplayer0/libvirt-rust", version = "~0.2" }
reqwest = "~0.8"
widestring = "0.4"
winapi = { version = "0.3", features = [ "errhandlingapi", "winbase", "winnt",  "winuser", "wincon", "consoleapi", "processthreadsapi" ] }
gtk = { version = "0.5", features = [ "v3_22_30" ] }
vfio_motion_common = { path = "../vfio_motion_common" }
