[package]
name = "vfio_motion_common"
version = "0.1.0"
authors = ["dev <jackos1998@gmail.com>"]

[dependencies]
quick-error = "~1.2"
log = "~0.4"
config = "~0.9"
virt = { git = "https://github.com/devplayer0/libvirt-rust", version = "~0.2" }
libc = "0.2"
serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "~0.11"

[target.'cfg(target_os = "windows")'.dependencies]
reqwest = "~0.8"
