[package]
name = "vfio_motion_server"
version = "0.1.0"
authors = ["dev <jackos1998@gmail.com>"]

[dependencies]
quick-error = "~1.2"
log = "~0.4"
simplelog = "~0.5"
clap = "~2.32"
serde = "~1.0"
serde_derive = "~1.0"
config = "~0.9"
virt = "~0.2"
serde_json = "~1.0"
libc = "0.2"
nix = "~0.11"
rocket = "0.3"
rocket_codegen = "0.3"
simple-signal = "~1.1"

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["json"]
